<?xml version="1.0"?>
	<package format="2">
	<name>vmu931_imu</name>
	<version>1.0.0</version>
	<description>The vmu931_imu package. Forked from https://github.com/RobotnikAutomation/vmu931_imu. Removed dependence of robotnik_msgs and added covariance parameters.</description>
	<author email="jens@jwrobotics.com">Jens Willy Johannsen</author>

	<maintainer email="jmnavarrete@robotnik.es">Juan Manuel Navarrete</maintainer>
	<maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

	<license>MIT</license>


	<!-- Url tags are optional, but multiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/vmu931_imu</url> -->

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_msgs</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>

</package>
